CommunitySetMatchExprToBDD: streamline community constraints (#9156)
1. Add a cache
2. Short-circuit single exact communities
3. Exit early when constraint is proven
4. Less garbage in allNegativeLiterals

commit-id:a214d129